# pds-drone-data-collector

./: CMakeCache.txt  CMakeLists.txt  Makefile  ReadMe.md  cmake_install.cmake
include/: global_variables.h
include/drone/: Data_Drone.h
include/file/: Mavlink_file_handler.h
include/network/: Com_Serial.h  Com_Wifi.h
include/threads/: Database_ThreadClass.h  DroneReceiver_ThreadClass.h
lib/: CMakeLists.txt
notes/: 0_test_libpqxx.txt  Drone_receiver.txt
src/: Main.cpp  TestLibpqxx.cpp
src/drone/: Data_Drone.cpp
src/file/: Mavlink_file_handler.cpp
src/network/: Com_Serial.cpp
src/threads/: Abstract_ThreadClass.cpp  Database_ThreadClass.cpp  DroneReceiver_ThreadClass.cpp
